! sửa add vào cart không cần reload

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -104,7 +104,7 @@
           {{/if}}
 
           <li class="nav-item cta cta-colored"><a href="/cart/gio-hang" class="nav-link"><span
-                class="icon-shopping_cart"></span>[{{session.cart.totalQty}}]</a></li>
+                class="icon-shopping_cart"></span>[<span id="totalQtyCart">{{session.cart.totalQty}}</span>]</a></li>
 
         </ul>
       </div>
