--- a/views/mot-san-pham.hbs
+++ b/views/mot-san-pham.hbs
@@ -78,7 +78,7 @@
 							<p style="color: #000;">Có sẵn {{{sp.available}}} kg</p>
 						</div>
 					</div>
-					<p><a href="/gio-hang" class="btn btn-black py-3 px-5">Thêm vào giỏ</a></p>
+					<p><a href="javascript:addToCart('{{sp._id}}')" class="btn btn-black py-3 px-5">Thêm vào giỏ</a></p>
 				</div>
 			</div>
 		</div>
@@ -144,10 +144,10 @@
 	<div class="container">
 		<h2>Sản phẩm tương tự cùng loai</h2>
 		{{#each relaProducts}}
-				<div class="col-md-6 col-lg-3 ftco-animate">
+<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="product">
-						<a href="/san-pham/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid" src="{{{img}}}"
-								alt="Colorlib Template">
+						<a href="/san-pham/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid"
+								src="{{{img}}}" alt="Colorlib Template">
 							{{#if salePrice}}
 							<span class="status">SALE</span>
 							{{/if}}
@@ -171,7 +171,8 @@
 										class="add-to-cart d-flex justify-content-center align-items-center text-center">
 										<span><i class="ion-ios-menu"></i></span>
 									</a>
-									<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+									<a href="javascript:addToCart('{{this._id}}')"
+										class="buy-now d-flex justify-content-center align-items-center mx-1">
 										<span><i class="ion-ios-cart"></i></span>
 									</a>
 									<a href="#" class="heart d-flex justify-content-center align-items-center ">
@@ -223,5 +224,17 @@
 				var params = "productId=" + idProduct + "&username=" + username + "&content=" + content;
 				sendComment.send(params);
 			}
-
+		function addToCart(productId)
+	{
+		var request = new XMLHttpRequest();
+		request.open("GET","/cart/add-to-cart/"+productId,true);
+		request.onreadystatechange = function()
+		{
+			if (this.readyState == 4 && this.status == 200) {
+				var htmlRendered = this.responseText;
+				$('#totalQtyCart').text(htmlRendered);
+			}
+		}
+		request.send();
+	}
 </script>
