--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -90,8 +90,7 @@
               aria-expanded="false">Mua hàng</a>
             <div class="dropdown-menu" aria-labelledby="dropdown04">
               <a class="dropdown-item" href="/san-pham">Các sản phẩm</a>
-              <a class="dropdown-item" href="/gio-hang">Giỏ hàng</a>
-              <a class="dropdown-item" href="/thanh-toan">Thanh toán</a>
+              <a class="dropdown-item" href="/cart/gio-hang">Giỏ hàng</a>
             </div>
           </li>
           <li class="nav-item"><a href="/ve-chung-toi" class="nav-link">Về chúng tôi</a></li>
